--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,7 @@ Install Root = C:\Program Files (x86)\National Instruments\LabVIEW 2011
 
 Component = \vi.lib\LabVIEW Interface for ChipKit
 Component = \examples\LabVIEW Interface for ChipKit
+Component = \examples\exbins\LabVIEW Interface for ChipKit
 Component = \menus\Categories\ChipKit
 
 Ignore = .ini, .git, .vipb, .md
